We prefer faster compiler times